        * tests/version_tests/Timeprobe_Test.dsp:
        * tests/version_tests/Timer_Queue_Test.dsp:
        * tests/version_tests/Tokens_Test.dsp:
        * tests/version_tests/UPIPE_SAP_Test.dsp:
        * tests/version_tests/Upgradable_RW_Test.dsp:
        * tests/version_tests/version_tests.dsw:

          Updated to use the new ACE_AS_STATIC_LIBS macro.

Sat Nov  4 19:33:39 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Fixed the mail message, the path to the CGI script was garbled.

        * include/makeinclude/rules.local.GNU:
          My last fixed did not work for static builds, the SOLINK rules
          got in the way.  It works correctly for both static and shared
          builds now.

Sat Nov  4 18:19:46 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/RMCast/RMCast_IO_UDP.cpp:
        * ace/RMCast/RMCast_Reassembly.cpp:
        * tests/Reactor_Notify_Test.cpp:
          Add missing template instantiations, they only showed up in
          builds with disabled inlining.

Sat Nov  4 17:05:08 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          New revision of the script.  It can copy log files directly to
          the destination directory, and it also runs the make_pretty
          script to generate both the HTML and HTML summary of the log.

        * bin/show_log_dir.pl:
          Corrections to the document and more fixes to make it Apache
          friendly.

        * include/makeinclude/rules.local.GNU:
          Add special target to force the creation of the .shobj and .obj
          directories, even with parallel builds.  The faster our
          computers get the more often we get failures due to this
          problem.

Sat Nov  4 14:53:39 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/make_pretty.pl:
          This is a modified version of Darrell's script to beautify our
          auto_compile logs.  This version works better with Unix builds