@@ -114,7 +114,8 @@ ACE_SSL_Context::ssl_library_init (void)
                                  USYNC_THREAD,
                                  0) != 0)
             ACE_ERROR ((LM_ERROR,
-                        "(%P|%t) ACE_SSL_Context::ssl_library_init - %p\n",
+                        ACE_TEXT ("(%P|%t) ACE_SSL_Context::ssl_library_init ")
+                        ACE_TEXT ("- %p\n"),
                         "mutex_init"));
         }
 
